; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_dir_free_shader.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_dir_free_shader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rarch_dir_list = type { i64, i32* }

@dir_shader_list = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @dir_free_shader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dir_free_shader() #0 {
  %1 = alloca %struct.rarch_dir_list*, align 8
  store %struct.rarch_dir_list* bitcast (i32* @dir_shader_list to %struct.rarch_dir_list*), %struct.rarch_dir_list** %1, align 8
  %2 = load %struct.rarch_dir_list*, %struct.rarch_dir_list** %1, align 8
  %3 = getelementptr inbounds %struct.rarch_dir_list, %struct.rarch_dir_list* %2, i32 0, i32 1
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @dir_list_free(i32* %4)
  %6 = load %struct.rarch_dir_list*, %struct.rarch_dir_list** %1, align 8
  %7 = getelementptr inbounds %struct.rarch_dir_list, %struct.rarch_dir_list* %6, i32 0, i32 1
  store i32* null, i32** %7, align 8
  %8 = load %struct.rarch_dir_list*, %struct.rarch_dir_list** %1, align 8
  %9 = getelementptr inbounds %struct.rarch_dir_list, %struct.rarch_dir_list* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  ret i32 1
}

declare dso_local i32 @dir_list_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
